Improve logging of nested arrays

Nested arrays should be printed with nested '[' and ']', rather than
flattened.

[ChangeLog][QML] Nested arrays are not flattened anymore when printed
through console.log() and friends.

Change-Id: Ic27e58047fd78bc146e1179585fd0cb2c60a1144
Fixes: QTBUG-71931
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>