tests/auto/qml/qqmlconsole/tst_qqmlconsole.cpp
@@ -93,6 +93,7 @@ void tst_qqmlconsole::logging()
     QTest::ignoreMessage(QtDebugMsg, "1 [ping,pong] [object Object] 2");
     QTest::ignoreMessage(QtDebugMsg, "[Hello,World]");
     QTest::ignoreMessage(QtDebugMsg, "QVariant(CustomObject, MY OBJECT)");
+    QTest::ignoreMessage(QtDebugMsg, "[[1,2,3,[2,2,2,2],4],[5,6,7,8]]");
 
     QScopedPointer<QQmlContext> loggingContext(new QQmlContext(engine.rootContext()));
     QStringList stringList; stringList << QStringLiteral("Hello") << QStringLiteral("World");
